<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.rogerfedererquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            style="@style/edit_text"
            android:hint="@string/name_edit_text" />

        <TextView
            style="@style/question_text_view"
            android:text="@string/question_1" />

        <TextView
            style="@style/question_body_text_view"
            android:text="@string/question_1_body" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/radio_checkbox_buttons"
                        android:text="@string/total_gs_1" />

                    <RadioButton
                        style="@style/radio_checkbox_buttons"
                        android:text="@string/total_gs_2" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="28dp">

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/total_gs_3" />

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/total_gs_4" />

            </LinearLayout>

        </LinearLayout>


        <TextView
            style="@style/question_text_view"
            android:text="@string/question_2" />

        <TextView
            style="@style/question_body_text_view"
            android:text="@string/question_2_body" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <CheckBox
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/english_language"/>

                <CheckBox
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/spanish_language"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="28dp">

                <CheckBox
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/french_language"/>

                <CheckBox
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/german_language"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/question_text_view"
            android:text="@string/question_3" />

        <TextView
            style="@style/question_body_text_view"
            android:text="@string/question_3_body" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/date_1" />

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/date_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/date_3" />

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/date_4" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/question_text_view"
            android:text="@string/question_4" />

        <TextView
            style="@style/question_body_text_view"
            android:text="@string/question_4_body" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/age_1" />

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/age_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/age_3" />

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/age_4" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/question_text_view"
            android:text="@string/question_5" />

        <TextView
            style="@style/question_body_text_view"
            android:text="@string/question_5_body" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="12dp">

                <CheckBox
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/idol_1"/>

                <CheckBox
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/idol_2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="8dp">

                <CheckBox
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/idol_3"/>

                <CheckBox
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/idol_4"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/question_text_view"
            android:text="@string/question_6" />

        <TextView
            style="@style/question_body_text_view"
            android:text="@string/question_6_body" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/week_number_1" />

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/week_number_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="28dp">

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/week_number_3" />

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/week_number_4" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/question_text_view"
            android:text="@string/question_7" />

        <TextView
            style="@style/question_body_text_view"
            android:text="@string/question_7_body" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/total_atp_finals_title_1" />

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/total_atp_finals_title_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="28dp">

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/total_atp_finals_title_3" />

                <RadioButton
                    style="@style/radio_checkbox_buttons"
                    android:text="@string/total_atp_finals_title_4" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/question_text_view"
            android:text="@string/question_8" />

        <TextView
            style="@style/question_body_text_view"
            android:text="@string/question_8_body" />

        <EditText
            style="@style/edit_text"
            android:hint="@string/answer_edit_text" />

        <TextView
            style="@style/question_text_view"
            android:text="@string/question_9" />

        <TextView
            style="@style/question_body_text_view"
            android:text="@string/question_9_body" />

        <EditText
            style="@style/edit_text"
            android:hint="@string/answer_edit_text" />

        <TextView
            style="@style/question_text_view"
            android:text="@string/question_10" />

        <TextView
            style="@style/question_body_text_view"
            android:text="@string/question_10_body" />

        <EditText
            style="@style/edit_text"
            android:hint="@string/answer_edit_text" />

        <Button
            style="@style/submit_button"
            android:text="@string/submit_button"/>

    </LinearLayout>

</ScrollView>
